# poetry-example

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yaml
tempconv/: __init__.py  conversions.py
tests/: conftest.py  test_temp_conv.py  test_version.py
