[tool.poetry]
name = "tempconv"
version = "0.2.0"
description = ""
authors = ["Don Bruce Fox <dfox09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
tox = "3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
